[package]
name = "lm401-pro-kit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-sync = { version = "0.1.0", path = "../embassy/embassy-sync", features = [
    "defmt",
] }
embassy-executor = { version = "0.1.0", path = "../embassy/embassy-executor", features = [
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.0", path = "../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = [
    "nightly",
    "defmt",
    "stm32wle5cb",
    "time-driver-any",
    "memory-x",
    "subghz",
    "unstable-pac",
    "exti",
] }
embassy-lora = { version = "0.1.0", path = "../embassy/embassy-lora", features = [
    "stm32wl",
    "time",
    "defmt",
] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-storage = "0.3.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.7.5", default-features = false }

[profile.dev]
opt-level = "z" # Optimize for size.

[profile.release]
# `strip = false` is required by defmt
# strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = "z" # Optimize for size.
